--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Coding Owl</title>
+    <link rel="stylesheet" href="/dist/css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Hello</h1>
+  </body>
 </html>
