--- a/index.html
+++ b/index.html
@@ -5,34 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding Owl</title>
     <link rel="stylesheet" href="/dist/css/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <form>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-        />
-        <div id="emailHelp" class="form-text">
-          We'll never share your email with anyone else.
+    <div class="container">
+      <form class="row justify-content-center">
+        <div class="col-md-6">
+          <h1>Log in</h1>
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" />
+          <label for="password" class="form-label">Password:</label>
+          <input type="password" class="form-control" id="password" />
+          <button class="btn btn-outline-primary">Log in</button>
         </div>
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="exampleInputPassword1"
-        />
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+      </form>
+    </div>
   </body>
 </html>
