--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <input type="email" class="form-control" id="email" />
           <label for="password" class="form-label">Password:</label>
           <input type="password" class="form-control" id="password" />
-          <button class="btn btn-outline-primary">Log in</button>
+          <a href="profile.html" class="btn btn-primary">Log in</a>
         </div>
       </form>
     </div>
