--- a/profile.html
+++ b/profile.html
@@ -12,5 +12,48 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="card" style="width: 18rem">
+      <img
+        class="card-img-top"
+        src="img/profile -picture.png"
+        alt="Card image cap"
+      />
+      <div class="card-body">
+        <h5 class="card-title">User</h5>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+        <a href="#" class="btn btn-primary">Add me</a>
+      </div>
+    </div>
+
+    <div class="card mb-3">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text text-secondary">
+          This is a wider card with supporting text below as a natural lead-in
+          to additional content. This content is a little bit longer.
+        </p>
+        <p class="card-text">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text text-secondary">
+          This is a wider card with supporting text below as a natural lead-in
+          to additional content. This content is a little bit longer.
+        </p>
+        <p class="card-text">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </p>
+      </div>
+      <img src="..." class="card-img-bottom" alt="..." />
+    </div>
+  </body>
 </html>
