--- a/feed.html
+++ b/feed.html
@@ -16,14 +16,12 @@
     <div class="container">
       <form class="row justify-content-center">
         <div class="col-md-6">
-          <h1 class="text-light">Log in</h1>
-          <label for="email" class="form-label text-light mt-4">Email</label>
+          <h1>Log in</h1>
+          <label for="email" class="form-label">Email</label>
           <input type="email" class="form-control" id="email" />
-          <label for="password" class="form-label text-light mt-4"
-            >Password:</label
-          >
+          <label for="password" class="form-label">Password:</label>
           <input type="password" class="form-control" id="password" />
-          <a href="profile.html" class="btn btn-primary mt-4">Log in</a>
+          <a href="profile.html" class="btn btn-primary">Log in</a>
         </div>
       </form>
     </div>
