--- a/profile.html
+++ b/profile.html
@@ -13,8 +13,8 @@
     />
   </head>
   <body>
-    <div class="container">
-      <div class="card" style="width: 18rem">
+    <div class="container col-md-6">
+      <div class="card mb-4" style="width: auto">
         <img
           class="card-img-top"
           src="img/profile -picture.png"
@@ -30,11 +30,12 @@
         </div>
       </div>
 
-      <div class="card mb-3">
-        <img src="img/post.png" class="card-img-top" alt="..." />
+      <h3 class="text-light">Latests Posts</h3>
+
+      <div class="card mb-4">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text text-secondary">
+          <p class="card-text">
             This is a wider card with supporting text below as a natural lead-in
             to additional content. This content is a little bit longer.
           </p>
@@ -42,11 +43,16 @@
             <small class="text-muted">Last updated 3 mins ago</small>
           </p>
         </div>
+        <img
+          src="img/post.png"
+          class="card-img-bottom"
+          alt="post from coding owl"
+        />
       </div>
-      <div class="card">
+      <div class="card mb-4">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text text-secondary">
+          <p class="card-text">
             This is a wider card with supporting text below as a natural lead-in
             to additional content. This content is a little bit longer.
           </p>
@@ -54,7 +60,24 @@
             <small class="text-muted">Last updated 3 mins ago</small>
           </p>
         </div>
-        <img src="..." class="card-img-bottom" alt="..." />
+        <img src="img/post-2.png" class="card-img-bottom" alt="..." />
+      </div>
+      <div class="card mb-4">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            This is a wider card with supporting text below as a natural lead-in
+            to additional content. This content is a little bit longer.
+          </p>
+          <p class="card-text">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </p>
+        </div>
+        <img
+          src="img/post.png"
+          class="card-img-bottom"
+          alt="post from coding owl"
+        />
       </div>
     </div>
   </body>
