--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
     />
   </head>
   <body>
-    <div class="container">
+    <div class="container mt-4">
       <form class="row justify-content-center">
         <div class="col-md-6">
+          <img
+            class="img-fluid mb-4 img-thumbnail"
+            src="img/coding-owl-background-img.png"
+            alt="coding owl"
+          />
           <h1 class="text-light">Log in</h1>
           <label for="email" class="form-label text-light mt-4">Email</label>
           <input type="email" class="form-control" id="email" />
