--- a/feed.html
+++ b/feed.html
@@ -13,17 +13,149 @@
     />
   </head>
   <body>
-    <div class="container">
-      <form class="row justify-content-center">
-        <div class="col-md-6">
-          <h1>Log in</h1>
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" />
-          <label for="password" class="form-label">Password:</label>
-          <input type="password" class="form-control" id="password" />
-          <a href="profile.html" class="btn btn-primary">Log in</a>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="profile.html">Coding Owl</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="profile.html">Profile</a>
+              <a class="nav-link" href="feed.html">Feed</a>
+              <a class="nav-link" href="index.html">Log in</a>
+            </div>
+          </div>
         </div>
-      </form>
+      </nav>
+    </header>
+    <nav class="navbar bg-body-tertiary-end">
+      <div class="container-fluid">
+        <form class="d-flex ms-auto" role="search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-primary" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+    <div class="container text-center mt-4">
+      <h3 class="text-light">Latests Posts</h3>
+      <button class="btn btn-primary mb-4">New Post</button>
+      <div class="row">
+        <div class="col">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </p>
+            </div>
+            <img src="img/post.png" class="card-img-bottom" alt="post" />
+          </div>
+        </div>
+        <div class="col order-5">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </p>
+            </div>
+            <img src="img/post-2.png" class="card-img-bottom" alt="..." />
+          </div>
+        </div>
+        <div class="col order-1">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </p>
+            </div>
+            <img src="img/post.png" class="card-img-bottom" alt="..." />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container text-center mt-4">
+      <div class="row">
+        <div class="col">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </p>
+            </div>
+            <img src="img/post.png" class="card-img-bottom" alt="post" />
+          </div>
+        </div>
+        <div class="col order-5">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </p>
+            </div>
+            <img src="img/post-2.png" class="card-img-bottom" alt="..." />
+          </div>
+        </div>
+        <div class="col order-1">
+          <div class="card mb-4">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </p>
+            </div>
+            <img src="img/post.png" class="card-img-bottom" alt="..." />
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
