--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,46 @@
     />
   </head>
   <body>
-    <div class="container col-md-6">
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="profile.html">Coding Owl</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="profile.html">Profile</a>
+              <a class="nav-link" href="feed.html">Feed</a>
+              <a class="nav-link" href="index.html">Log in</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <nav class="navbar bg-body-tertiary-end">
+      <div class="container-fluid">
+        <form class="d-flex ms-auto" role="search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-primary" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <div class="container col-md-6 mt-4">
       <div class="card mb-4" style="width: auto">
         <img
           class="card-img-top"
@@ -22,6 +61,12 @@
         />
         <div class="card-body">
           <h5 class="card-title">User</h5>
+          <div class="container row">
+            <p class="card-subtitle mb-2 text-body-secondary">
+              Followers- 1098
+            </p>
+            <p class="card-subtitle mb-2 text-body-secondary">Following- 765</p>
+          </div>
           <p class="card-text">
             Some quick example text to build on the card title and make up the
             bulk of the card's content.
@@ -31,6 +76,7 @@
       </div>
 
       <h3 class="text-light">Latests Posts</h3>
+      <button class="btn btn-primary mb-4">New Post</button>
 
       <div class="card mb-4">
         <div class="card-body">
