--- a/feed.html
+++ b/feed.html
@@ -51,6 +51,35 @@
         </form>
       </div>
     </nav>
+    <div class="row justify-content-end">
+      <div class="col-md-6">
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="inlineRadioOptions"
+            id="inlineRadio1"
+            value="option1"
+          />
+          <label class="form-check-label text-light" for="inlineRadio1"
+            >Not Read</label
+          >
+        </div>
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="radio"
+            name="inlineRadioOptions"
+            id="inlineRadio2"
+            value="option2"
+          />
+          <label class="form-check-label text-light" for="inlineRadio2"
+            >Read</label
+          >
+        </div>
+      </div>
+    </div>
+
     <div class="container text-center mt-4">
       <h3 class="text-light">Latests Posts</h3>
       <button class="btn btn-primary mb-4">New Post</button>
