--- a/feed.html
+++ b/feed.html
@@ -81,8 +81,17 @@
     </div>
 
     <div class="container text-center mt-4">
-      <h3 class="text-light">Latests Posts</h3>
       <button class="btn btn-primary mb-4">New Post</button>
+      <div class="form-floating">
+        <textarea
+          class="form-control mb-4"
+          placeholder="Leave a comment here"
+          id="floatingTextarea2"
+          style="height: 100px"
+        ></textarea>
+        <label for="floatingTextarea2">Comments</label>
+      </div>
+      <h3 class="text-light">Latests Posts</h3>
       <div class="row">
         <div class="col">
           <div class="card mb-4">
