--- a/feed/feed.html
+++ b/feed/feed.html
@@ -16,7 +16,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="profile.html">Coding Owl</a>
+          <a class="navbar-brand" href="../profile/profile.html">Coding Owl</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -30,9 +30,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="profile.html">Profile</a>
+              <a class="nav-link" href="../profile/profile.html">Profile</a>
               <a class="nav-link" href="feed.html">Feed</a>
-              <a class="nav-link" href="index.html">Log in</a>
+              <a class="nav-link" href="../index.html">Log in</a>
             </div>
           </div>
         </div>
@@ -106,7 +106,7 @@
                 <small class="text-muted">Last updated 3 mins ago</small>
               </p>
             </div>
-            <img src="img/post.png" class="card-img-bottom" alt="post" />
+            <img src="../img/post.png" class="card-img-bottom" alt="post" />
           </div>
         </div>
         <div class="col order-5">
@@ -122,7 +122,7 @@
                 <small class="text-muted">Last updated 3 mins ago</small>
               </p>
             </div>
-            <img src="img/post-2.png" class="card-img-bottom" alt="..." />
+            <img src="../img/post-2.png" class="card-img-bottom" alt="..." />
           </div>
         </div>
         <div class="col order-1">
@@ -138,7 +138,7 @@
                 <small class="text-muted">Last updated 3 mins ago</small>
               </p>
             </div>
-            <img src="img/post.png" class="card-img-bottom" alt="..." />
+            <img src="../img/post.png" class="card-img-bottom" alt="..." />
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
                 <small class="text-muted">Last updated 3 mins ago</small>
               </p>
             </div>
-            <img src="img/post.png" class="card-img-bottom" alt="post" />
+            <img src="../img/post.png" class="card-img-bottom" alt="post" />
           </div>
         </div>
         <div class="col order-5">
@@ -174,7 +174,7 @@
                 <small class="text-muted">Last updated 3 mins ago</small>
               </p>
             </div>
-            <img src="img/post-2.png" class="card-img-bottom" alt="..." />
+            <img src="../img/post-2.png" class="card-img-bottom" alt="..." />
           </div>
         </div>
         <div class="col order-1">
