--- a/profile/profile.html
+++ b/profile/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding Owl</title>
-    <link rel="stylesheet" href="/dist/css/index.css" />
+    <link rel="stylesheet" href="../dist/css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,8 +31,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="profile.html">Profile</a>
-              <a class="nav-link" href="feed.html">Feed</a>
-              <a class="nav-link" href="index.html">Log in</a>
+              <a class="nav-link" href="../feed/feed.html">Feed</a>
+              <a class="nav-link" href="../index.html">Log in</a>
             </div>
           </div>
         </div>
@@ -56,7 +56,7 @@
       <div class="card mb-4" style="width: auto">
         <img
           class="card-img-top"
-          src="img/profile -picture.png"
+          src="../img/profile -picture.png"
           alt="Card image cap"
         />
         <div class="card-body">
@@ -90,7 +90,7 @@
           </p>
         </div>
         <img
-          src="img/post.png"
+          src="../img/post.png"
           class="card-img-bottom"
           alt="post from coding owl"
         />
@@ -106,7 +106,7 @@
             <small class="text-muted">Last updated 3 mins ago</small>
           </p>
         </div>
-        <img src="img/post-2.png" class="card-img-bottom" alt="..." />
+        <img src="../img/post-2.png" class="card-img-bottom" alt="..." />
       </div>
       <div class="card mb-4">
         <div class="card-body">
@@ -120,7 +120,7 @@
           </p>
         </div>
         <img
-          src="img/post.png"
+          src="../img/post.png"
           class="card-img-bottom"
           alt="post from coding owl"
         />
