--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p class="text-light mt-4 text-center">or register</p>
 
           <form
-        class="row justify-content-center" id="registerForm" method="post" action="/auth/register">
+        class="row justify-content-center" id="registerForm" >
           <div id="message"></div>
 
           <label for="name" class="form-label text-light mt-4">Name</label>
