--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./img/codingOwl-logo.png" type="image/x-icon">
+      
 
     <script src="js/index.mjs" type="module" ></script>
 
@@ -30,24 +32,36 @@
 
           <form
         class="row justify-content-center" id="registerForm" >
-          <div id="message"></div>
 
-          <label for="name" class="form-label text-light mt-4">Name</label>
+          <label for="name" class="form-label text-light mt-4"> name:</label>
           <input
             type="text"
             name="name"
             class="form-control"
-            id="name"  required pattern="[\w]+"title="The name value must not contain punctuation symbols apart from underscore (_)."
+            id="name"  required 
           />
 
-          <label for="email" class="form-label text-light mt-4">Email</label>
-          <input type="email" class="form-control" id="email" name="Email" required pattern=".+@(stud\.noroff\.no|noroff\.no)" title="Email must be a valid stud.noroff.no or noroff.no email address.">
+          <label for="email" class="form-label text-light mt-4">email:</label>
+          <input type="email" class="form-control" id="email" name="email" required >
           <label for="password" class="form-label text-light mt-4"
-            >Password:</label
+            >password:</label
           >
-          <input type="password" class="form-control" id="password"  required title="Password must be at least 8 characters." minlength="8" 
+          <input type="password" class="form-control" id="password"  required  minlength="8" 
           />
-          <button type="submit" value="Register" class="btn btn-primary mb-4 mt-4">Register</button>
+          <!-- <label for="banner" class="form-label text-light mt-4"
+          >banner:</label
+        >
+          <input type="url" class="form-control" name="banner">
+
+          <label for="avatar" class="form-label text-light mt-4"
+          >avatar:</label
+        >
+          <input type="url" class="form-control" name="avatar">-->
+
+          
+
+
+          <button type="submit" value="register" class="btn btn-primary mb-4 mt-4">register</button>
           </form>
         </div>
       </form>
