--- a/feed/feed.html
+++ b/feed/feed.html
@@ -16,7 +16,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="../profile/profile.html">Coding Owl</a>
+          <a class="navbar-brand" href="../login/login.html">Coding Owl</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -32,7 +32,7 @@
             <div class="navbar-nav">
               <a class="nav-link" href="../profile/profile.html">Profile</a>
               <a class="nav-link" href="feed.html">Feed</a>
-              <a class="nav-link" href="../index.html">Log in</a>
+              <a class="nav-link" href="../login/login.html">Log in</a>
             </div>
           </div>
         </div>
