--- a/index.html
+++ b/index.html
@@ -23,7 +23,35 @@
           alt="coding owl"
         />
         <h1 class="text-light">Log in</h1>
+
+        <form class="row justify-content-center" id="loginForm">
+
+          <label for="email" class="form-label text-light mt-4">Email:</label>
+          <input
+            type="email"
+            class="form-control"
+            name="email"
+            required
+            pattern=".+@(stud\.noroff\.no|noroff\.no)"
+            title="Email must be a valid stud.noroff.no or noroff.no email address"
+          />
+
+          <!-- Password field -->
+          <label for="password" class="form-label text-light mt-4"
+            >Password:</label
+          >
+          <input
+            type="password"
+            class="form-control"
+            name="password"
+            required
+            minlength="8"
+            title="Password must be at least 8 characters long"
+          />
+
         <p class="text-light mt-4 text-center">or register</p>
+
+
         <form class="row justify-content-center" id="registerForm">
           <!-- Name field -->
           <label for="name" class="form-label text-light mt-4">Name:</label>
