--- a/profile/profile.html
+++ b/profile/profile.html
@@ -16,7 +16,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="profile.html">Coding Owl</a>
+          <a class="navbar-brand" href="../index.html">Coding Owl</a>
           <button
             class="navbar-toggler"
             type="button"
