--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="navbar-nav">
               <a class="nav-link" href="../profile/profile.html">Profile</a>
               <a class="nav-link" href="./feed/feed.html">Feed</a>
-              <a class="nav-link" href="../index.html">Log in</a>
+              <a class="nav-link" href="./login/login.html">Log in</a>
             </div>
           </div>
         </div>
@@ -47,79 +47,8 @@
           src="img/coding-owl-background-img.png"
           alt="coding owl"
         />
-        <h1 class="text-light">Log in</h1>
-<<<<<<< HEAD
 
-        <form class="row justify-content-center" id="loginForm">
-
-          <label for="email" class="form-label text-light mt-4">Email:</label>
-          <input
-            type="email"
-            class="form-control"
-            name="email"
-            required
-            pattern=".+@(stud\.noroff\.no|noroff\.no)"
-            title="Email must be a valid stud.noroff.no or noroff.no email address"
-          />
-
-          <!-- Password field -->
-          <label for="password" class="form-label text-light mt-4"
-            >Password:</label
-          >
-          <input
-            type="password"
-            class="form-control"
-            name="password"
-            required
-            minlength="8"
-            title="Password must be at least 8 characters long"
-          />
-
-        <p class="text-light mt-4 text-center">or register</p>
-
-
-        <form class="row justify-content-center" id="registerForm">
-          <!-- Name field -->
-          <label for="name" class="form-label text-light mt-4">Name:</label>
-          <input
-            type="text"
-            name="name"
-            class="form-control"
-            id="name"
-            required
-            pattern="\w*[_]?\w*"
-            title="The name must not contain punctuation symbols apart from underscore (_)"
-          />
-
-=======
-        <form class="row justify-content-center" id="loginForm">
->>>>>>> e62ad21 (git push)
-          <!-- Email field -->
-          <label for="email" class="form-label text-light mt-4">Email:</label>
-          <input
-            type="email"
-            class="form-control"
-            name="email"
-            required
-            pattern=".+@(stud\.noroff\.no|noroff\.no)"
-            title="Email must be a valid stud.noroff.no or noroff.no email address"
-          />
-
-          <!-- Password field -->
-          <label for="password" class="form-label text-light mt-4"
-            >Password:</label
-          >
-          <input
-            type="password"
-            class="form-control"
-            name="password"
-            required
-            minlength="8"
-            title="Password must be at least 8 characters long"
-          />
-          <button type="submit" class="btn btn-primary mb-4 mt-4">Login</button>
-        </form>
-        <p class="text-light mt-4 text-center">or register</p>
+        <p class="text-light mt-4 text-center">Register a new user</p>
         <form class="row justify-content-center" id="registerForm">
           <!-- Name field -->
           <label for="name" class="form-label text-light mt-4">Name:</label>
