--- a/login/login.html
+++ b/login/login.html
@@ -4,28 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coding Owl/ Login</title>
-    <link rel="stylesheet" href="dist/css/index.css" />
+    <link rel="stylesheet" href="../dist/css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="./img/codingOwl-logo.png" type="image/x-icon" />
-    <script src="js/index.mjs" type="module"></script>
+    <link rel="icon" href="../img/codingOwl-logo.png" type="image/x-icon" />
+
+    <script src="../js/index.mjs" type="module"></script>
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Coding Owl</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="../profile/profile.html">Profile</a>
+              <a class="nav-link" href="../feed/feed.html">Feed</a>
+              <a class="nav-link" href="login.html">Log in</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
     <div class="container mt-4">
       <div class="col-md-6">
         <img
           class="img-fluid mb-4 img-thumbnail"
-          src="img/coding-owl-background-img.png"
+          src="../img/coding-owl-background-img.png"
           alt="coding owl"
         />
         <h1 class="text-light">Log in</h1>
 
         <form class="row justify-content-center" id="loginForm">
-
           <label for="email" class="form-label text-light mt-4">Email:</label>
           <input
             type="email"
@@ -48,7 +73,8 @@
             minlength="8"
             title="Password must be at least 8 characters long"
           />
-
+          <button type="submit" class="btn btn-primary mb-4 mt-4">Login</button>
+        </form>
       </div>
     </div>
   </body>
