--- a/feed/feed.html
+++ b/feed/feed.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <script src="../index.html" type="module"></script>
   </head>
   <body>
     <header>
@@ -79,16 +80,8 @@
         </div>
       </div>
     </div>
-
-    <div class="container text-center mt-4">
-      <button class="btn btn-primary mb-4">New Post</button>
+      <div class="container-fluid" id="post"></div>
       <div class="form-floating">
-        <textarea
-          class="form-control mb-4"
-          placeholder="Leave a comment here"
-          id="floatingTextarea2"
-          style="height: 100px"
-        ></textarea>
         <label for="floatingTextarea2">Comments</label>
       </div>
       <h3 class="text-light">Latests Posts</h3>
