--- a/profile/index.html
+++ b/profile/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+    <script src="../js/index.mjs" type="module"></script>
   </head>
   <body>
     <header>
@@ -76,7 +77,7 @@
       </div>
 
       <h3 class="text-light">Latests Posts</h3>
-      <button class="btn btn-primary mb-4">New Post</button>
+      <button class="btn btn-primary mb-4" id="newPostButton">New Post</button>
 
       <div class="card mb-4">
         <div class="card-body">
